[tool.poetry]
name = "caesar-cipher"
version = "0.1.0"
description = ""
authors = ["maisjamil1 <maisjamil17118@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.5"
colorama = "^0.4.3"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
